--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
             android:textSize="40dp"
             android:gravity="center"
             android:onClick="click"
-            android:text="结果" />
+            android:text="@string/out_hint" />
 
         <Button
             android:id="@+id/dollar"
